local-kustomize/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: online-boutique
  namespace: online-boutique
spec:
  parentRefs:
    - name: local-gateway
      namespace: gateway-system
      sectionName: http
  hostnames:
    - boutique.test
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
